# Genora

./: CLAUDE.md  README.md  backend-plan.md  render.yaml
.claude/: launch.json
.claude/skills/ui-ux-design/: SKILL.md
.github/workflows/: ci.yml
ai-service/: .env.example  .gitignore  Dockerfile  fly.toml  pyproject.toml
ai-service/ai_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ai-service/app/: main.py
ai-service/app/core/: config.py  correlation.py  db.py  logging.py  security.py
ai-service/app/routers/: generate.py  rag.py  slop_guard.py
ai-service/app/schemas/: errors.py  generate.py  rag.py  slop_guard.py
ai-service/app/services/: embeddings.py  rag.py  slop_guard.py
ai-service/app/services/pipeline/: orchestrator.py  prompts.py
ai-service/app/services/providers/: anthropic_adapter.py  base.py  errors.py  gemini_adapter.py  groq_adapter.py  openai_adapter.py  registry.py
ai-service/app/tests/: test_config.py  test_embeddings.py  test_generate_endpoint.py  test_health.py  test_orchestrator.py  test_prompts.py  test_provider_adapters.py  test_rag.py  test_security.py  test_slop_guard.py
web/: .env.example  .mcp.json  AGENTS.md  CLAUDE.md  drizzle.config.ts  package-lock.json  package.json  trigger.config.ts  tsconfig.json  vitest.config.ts
web/drizzle/: 0001_odd_captain_marvel.sql  0003_famous_violations.sql  0004_lethal_meltdown.sql  0005_peaceful_ultron.sql
web/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  _journal.json
web/src/: auth.ts  proxy.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: AppHeader.tsx  AppShell.tsx  ButtonSpinner.tsx  ComposeView.tsx  ConfirmDialog.tsx  DashboardView.tsx  DraftRow.tsx  DraftsView.tsx  GenoraProvider.tsx  Hoverable.tsx  NavigationProgress.tsx  NewFolderDialog.tsx  OutputView.tsx  PlatformIcon.tsx  SettingsBody.tsx  SettingsModal.tsx  (+4 more)
web/trigger/: generatePlatformPost.test.ts  generatePlatformPost.ts  generatePost.test.ts  generatePost.ts
(+167 files in other folders)
