[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "google-genai>=2.10.0",
    "groq>=1.5.0",
    "openai>=2.44.0",
    "pgvector>=0.5.0",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# FastAPI's `Depends(...)`/`Query(...)`/etc. are re-evaluated per-request by
# FastAPI itself, not literal mutable defaults — B008 doesn't know that and
# only auto-exempts calls when the parameter's type annotation happens to be
# immutable (e.g. `str`), so any Depends() on a custom type gets flagged.
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Cookie",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Security",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
